--- a/PasteMystBot/PasteMystBot.csproj
+++ b/PasteMystBot/PasteMystBot.csproj
@@ -28,17 +28,17 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="DSharpPlus" Version="4.3.0-nightly-01188"/>
-        <PackageReference Include="DSharpPlus.Interactivity" Version="4.3.0-nightly-01188"/>
-        <PackageReference Include="DSharpPlus.SlashCommands" Version="4.3.0-nightly-01188"/>
+        <PackageReference Include="DSharpPlus" Version="4.4.1"/>
+        <PackageReference Include="DSharpPlus.Interactivity" Version="4.4.1"/>
+        <PackageReference Include="DSharpPlus.SlashCommands" Version="4.4.1"/>
         <PackageReference Include="Humanizer.Core" Version="2.14.1"/>
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0"/>
-        <PackageReference Include="NLog" Version="5.0.5"/>
-        <PackageReference Include="NLog.Extensions.Logging" Version="5.1.0"/>
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1"/>
+        <PackageReference Include="NLog" Version="5.1.5"/>
+        <PackageReference Include="NLog.Extensions.Logging" Version="5.2.5"/>
         <PackageReference Include="PasteMystNet" Version="1.2.3"/>
-        <PackageReference Include="X10D" Version="3.2.0-nightly.134"/>
-        <PackageReference Include="X10D.DSharpPlus" Version="3.2.0-nightly.134"/>
-        <PackageReference Include="X10D.Hosting" Version="3.2.0-nightly.134"/>
+        <PackageReference Include="X10D" Version="3.2.0"/>
+        <PackageReference Include="X10D.DSharpPlus" Version="3.2.0"/>
+        <PackageReference Include="X10D.Hosting" Version="3.2.0"/>
         <PackageReference Include="ZString" Version="2.5.0"/>
     </ItemGroup>
 
