--- a/PasteMystBot/PasteMystBot.csproj
+++ b/PasteMystBot/PasteMystBot.csproj
@@ -33,9 +33,11 @@
         <PackageReference Include="DSharpPlus.SlashCommands" Version="4.5.0"/>
         <PackageReference Include="Humanizer.Core" Version="2.14.1"/>
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0"/>
-        <PackageReference Include="NLog" Version="5.3.4"/>
-        <PackageReference Include="NLog.Extensions.Logging" Version="5.3.15"/>
         <PackageReference Include="PasteMystNet" Version="2.0.0"/>
+        <PackageReference Include="Serilog" Version="4.2.0"/>
+        <PackageReference Include="Serilog.Extensions.Logging" Version="9.0.0"/>
+        <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0"/>
+        <PackageReference Include="Serilog.Sinks.File" Version="6.0.0"/>
         <PackageReference Include="X10D" Version="4.0.0"/>
         <PackageReference Include="X10D.Hosting" Version="4.0.0"/>
         <PackageReference Include="ZString" Version="2.6.0"/>
