--- a/PasteMystBot/PasteMystBot.csproj
+++ b/PasteMystBot/PasteMystBot.csproj
@@ -48,8 +48,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Content Include="..\docker-compose.yaml">
-            <Link>docker-compose.yaml</Link>
+        <Content Include="..\docker-compose.yml">
+            <Link>docker-compose.yml</Link>
         </Content>
         <Content Include="..\Dockerfile">
             <Link>Dockerfile</Link>
