--- a/PasteMyst.Tests/PasteMyst.Tests.csproj
+++ b/PasteMyst.Tests/PasteMyst.Tests.csproj
@@ -8,10 +8,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0"/>
-        <PackageReference Include="MSTest.TestAdapter" Version="2.2.8"/>
-        <PackageReference Include="MSTest.TestFramework" Version="2.2.8"/>
-        <PackageReference Include="coverlet.collector" Version="3.1.2"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0"/>
+        <PackageReference Include="coverlet.collector" Version="6.0.2"/>
+        <PackageReference Include="NUnit" Version="4.2.2"/>
     </ItemGroup>
 
     <ItemGroup>
